--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
       context: ./
     ports:
-      - 9001:9001
+      - 9003:9001
     command: ["air", "-c", ".air.toml"]
     depends_on:
       redis:
@@ -53,5 +53,23 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: root
       ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
 
+  minio:
+    image: quay.io/minio/minio:RELEASE.2023-11-20T22-40-07Z
+    command: server --console-address ":9001" /data1
+    ports:
+      - "9004:9000"
+      - "9005:9001"
+    environment:
+      MINIO_ROOT_USER: Q3AM3UQ867SPQQA43P2F
+      MINIO_ROOT_PASSWORD: zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - minio-data:/data1
+
 volumes:
   dbdata:
+  minio-data:
