--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,6 +62,7 @@ services:
     environment:
       MINIO_ROOT_USER: Q3AM3UQ867SPQQA43P2F
       MINIO_ROOT_PASSWORD: zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
+      ENDPOINT: "minio:9000"
     healthcheck:
       test: ["CMD", "mc", "ready", "local"]
       interval: 5s
